<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.logistix</groupId>
    <artifactId>logistix-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>LogistiX Parent</name>
    <description>Open Source Framework for AI-Powered Operational Decision Making</description>
    <url>https://github.com/logistix-ai/logistix</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <modules>
        <module>logistix-common</module>
        <module>logistix-domain</module>
        <module>logistix-model</module>
        <module>logistix-engine</module>
        <module>logistix-dsl</module>
        <module>logistix-ai</module>
        <module>logistix-rag</module>
        <module>logistix-simulation</module>
        <module>logistix-benchmark</module>
        <module>logistix-spring-boot-starter</module>
        <module>logistix-api</module>
        <module>logistix-mcp</module>
        <module>../examples</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Framework & Dependency Versions -->
        <spring-boot.version>3.4.3</spring-boot.version>
        <spring-ai.version>1.0.0-M6</spring-ai.version>
        <springdoc-openapi.version>2.8.5</springdoc-openapi.version>
        <testcontainers.version>1.20.5</testcontainers.version>
        <flyway.version>10.22.0</flyway.version>
        <postgresql.version>42.7.5</postgresql.version>
        <pgvector.version>0.1.6</pgvector.version>
        <jakarta-validation.version>3.1.0</jakarta-validation.version>
        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.16</logback.version>
        <jackson.version>2.18.2</jackson.version>

        <!-- Maven Plugins -->
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- LogistiX Internal Modules -->
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-dsl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-ai</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-rag</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-simulation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-benchmark</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.logistix</groupId>
                <artifactId>logistix-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- OpenAPI / Documentation -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>

            <!-- Vector & Database Drivers -->
            <dependency>
                <groupId>com.pgvector</groupId>
                <artifactId>pgvector</artifactId>
                <version>${pgvector.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-java-and-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.8.0,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
